<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="140dp"
            app:srcCompat="@mipmap/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/logo"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/firstname"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/lastname"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_confirm"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/signup_button"
        android:text="@string/signup"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"/>






</LinearLayout>