<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"

    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username_hint"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="85dp"
            android:textColor="#9e9e9e"
            android:textSize="12sp"
            android:text="@string/no_account"/>
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:text="@string/sign_up"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9e9e9e"
        android:textSize="12sp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/privacy"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
  />
</LinearLayout>