<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.activitycentral.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.example.activitycentral.ui.post.PostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.activitycentral.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- fragment
        android:id="@+id/nav_tools"
        android:name="com.example.activitycentral.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" /-->

    <!--fragment
        android:id="@+id/nav_share"
        android:name="com.example.activitycentral.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" /-->

    <!--fragment
        android:id="@+id/nav_send"
        android:name="com.example.activitycentral.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" /-->
</navigation>